django admin url and admin(app) url now diffrent and some language changes
